fix image spacing

--- a/styles/pages/gallery-item.module.scss
+++ b/styles/pages/gallery-item.module.scss
@@ -1,7 +1,7 @@
 .caption {
-
+  margin-bottom: 1rem;
 }
 
 .name {
-
+  margin-bottom: 1rem;
 }
